# fastnvmetrics

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  pyproject.toml
docs/: adding_a_board.md
fastnvmetrics/: __init__.py  _ext.pyi
include/fastnvmetrics/: fastnvmetrics.hpp
scripts/: setup_fastnvmetrics.sh
src/: bindings.cpp  config.cpp  engine.cpp
tests/: test_engine.cpp  test_fastnvmetrics.py
