[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2.0"]
build-backend = "scikit_build_core.build"

[project]
name = "fastnvmetrics"
version = "0.2.0"
description = "High-frequency Jetson Orin profiler — GPU, CPU, EMC, power, RAM, thermals via sysfs"
requires-python = ">=3.10"
dependencies = ["numpy"]
license = "MIT"

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
Repository = "https://github.com/orinagx/fastnvmetrics"

[tool.scikit-build]
wheel.packages = ["fastnvmetrics"]

[tool.scikit-build.editable]
mode = "inplace"
